# audio_sample

./: BENCHMARKS.md  Cargo.toml  LICENSE  README.md  README_BASE.md  benchmark.ipynb  conversion_benches.bench  create_readme.py  new_benchmarks.bench
bench_results/: f32_to_f64.md  f32_to_i16.md  f32_to_i24.md  f32_to_i32.md  f64_to_f32.md  f64_to_i16.md  f64_to_i24.md  f64_to_i32.md  i16_to_f32.md  i16_to_f64.md  i16_to_i24.md  i16_to_i32.md  i24_to_f32.md  i24_to_f64.md  i24_to_i16.md  i24_to_i32.md  i32_to_f32.md  i32_to_f64.md  i32_to_i16.md  i32_to_i24.md
benches/: conversion_benches.rs
src/: error.rs  lib.rs  samples.rs  visualization.rs
