[package]
name = "audio_sample"
version = "2.0.0"
edition = "2024"
authors = ["Jack Geraghty <jgeraghty049@gmail.com>"]
license = "MIT"
description = "A library for working with audio samples."
readme = "README.md"
homepage = "https://github.com/jmg049/audio_sample"
repository = "https://github.com/jmg049/audio_sample"
documentation = "https://docs.rs/audio_sample"
keywords = ["dsp", "audio", "conversion"]
categories = ["encoding", "multimedia"]


[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
i24 = { version = "2.1.0", features = ["alloc"]}
ndarray = { version = "0.16.1", optional = true }
num-traits = "0.2.19"
thiserror = "2.0.12"

[dev-dependencies]
approx_eq = "0.1.8"
criterion = "0.5.1"
rand = "0.9.0"
tempfile = "3.19.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "conversion_benches"
harness = false

[features]
ndarray = ["dep:ndarray"]

